<resources xmlns:font-size="urn:oasis:names:tc:xliff:document:1.2" xmlns:mso-list="http://schemas.android.com/tools" xmlns:o="http://schemas.android.com/apk/res-auto" xmlns:text-indent="http://schemas.android.com/apk/res/android">
    <string name="app_name">Face Gesture Recognition App</string>
    <string name="app_name_full">Face Gesture Recognition App</string>
    <string name="app_name_full_extra">Hand and Face Gestures Recognition System</string>
    <string name="title_activity_devisepage">devisepage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_admin_panal">admin_panal</string>
    <string name="title_home">Home</string>
    <string name="sign_up_here">Sign Up Here?</string>
    <string name="don_t_have_an_account">Don’t have an account? </string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="sign_up"> Sign up </string>
    <string name="mail_address">Mail Address</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="already_a_member">Already a member?</string>
    <string name="sign_in">SIGN IN!</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="u_forget_your_password"><u>Forget your password</u></string>
    <string name="reset_my_password">RESET MY PASSWORD</string>
    <string name="create_profile">CREATE PROFILE</string>
    <string name="name">Name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="surname">Surname:</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="e_mail">E-mail:</string>
    <string name="email_address">Email Address</string>
    <string name="profile">Profile</string>
    <string name="dies">###</string>
    <string name="log_out">Log Out</string>
    <string name="profile_item_email_header">Email</string>
    <string name="profile_item_phone_header">Cellphone Number</string>
    <string name="profile_item_password_header">Change Password</string>
    <string name="profile_item_email_details">sample@gmail.com</string>
    <string name="profile_item_phone_details">+1 40425 50505</string>
    <string name="profile_item_password_details">Tap to change password</string>
    <string name="click_to_scan">Click to Scan</string>
    <string name="pd_app_name">Personal Doctor Booking App</string>
    <string name="pd_book">book</string>
    <string name="pd_btn_book_now">Book now</string>
    <string name="pd_btn_book_schedule_now">Book Schedule Now</string>
    <string name="pd_btn_complete">Complete</string>
    <string name="pd_btn_direction">Direction</string>
    <string name="pd_btn_fb">Facebook</string>
    <string name="pd_btn_insta">Instagram</string>
    <string name="pd_btn_reschedule">Reschedule</string>
    <string name="pd_btn_share_qr">Share QR</string>
    <string name="pd_btn_submit">Submit</string>
    <string name="pd_btn_txt_emargency_support">Emergency Support</string>
    <string name="pd_btn_txt_logout_profile">Logout</string>
    <string name="pd_btn_txt_save_profile">Save</string>
    <string name="pd_btn_waze">Waze</string>
    <string name="pd_change_pswd">Change Password</string>
    <string name="pd_chris_schedule">Chris Schedule</string>
    <string name="pd_clear">Clear</string>
    <string name="pd_close">Close</string>
    <string name="pd_code">Code</string>
    <string name="pd_contact_us">Contact with us</string>
    <string name="pd_create_accnt">Create an account</string>
    <string name="pd_create_accnt_txt">Create a new account to make your booking easier</string>
    <string name="pd_create_now">Create now</string>
    <string name="pd_doc">doc</string>
    <string name="pd_earlier">Earlier</string>
    <string name="pd_edt_ph_no">Mobile Number</string>
    <string name="pd_email_address">Email Address</string>
    <string name="pd_enter_code">Enter Code</string>
    <string name="pd_enter_code_descpription">Enter your forgot key below</string>
    <string name="pd_font_bold">Pd_fonts/GoogleSans-Bold.ttf</string>
    <string name="pd_font_medium">Pd_fonts/GoogleSans-Medium.ttf</string>
    <string name="pd_font_regular">Pd_fonts/GoogleSans-Regular.ttf</string>
    <string name="pd_hint_address">Address*</string>
    <string name="pd_hint_address_2">Address 2</string>
    <string name="pd_hint_birth_date">Birth Date*</string>
    <string name="pd_hint_city">City*</string>
    <string name="pd_hint_confrim_pswd">Confrim Password*</string>
    <string name="pd_hint_country">Country*</string>
    <string name="pd_hint_f_name">First Name*</string>
    <string name="pd_hint_ic_no">IC No/Passport No</string>
    <string name="pd_hint_l_name">Last Name*</string>
    <string name="pd_hint_new_pswd">New Password*</string>
    <string name="pd_hint_txt_ip_email">Email Address*</string>
    <string name="pd_hint_txt_ip_pswd">Password*</string>
    <string name="pd_home">Home</string>
    <string name="pd_mtrl_btn_verify">Verify</string>
    <string name="pd_no_accnt">Don\'t have an account?</string>
    <string name="pd_open">Open</string>
    <string name="pd_or">or</string>
    <string name="pd_our_therapist">Our Therapist</string>
    <string name="pd_outlet">Outlet</string>
    <string name="pd_reset_pswd">Reset Password</string>
    <string name="pd_suggest_city">Suggest a City</string>
    <string name="pd_term_condtion">If your city is not on World Tour List.you can still enjoy this Tarditional muscle and joint relief tchnique by suggest for your city.Share with your friends on social media to nominate the city of your choice. \10\10Once we have enough nomination.We will schedule in your city for our future trips! just fill in the form to vote your city and get more people in your city to do the same.\10\10If your city is not on World Tour List.you can still enjoy this Tarditional muscle and joint relief tchnique by suggest for your city.Share with your friends on social media to nominate the city of your choice.Once we have enough nomination.We will schedule in your city for our future trips! just fill in the form to vote your city and get more people in your city to do the same.</string>
    <string name="pd_title_Address">Address</string>
    <string name="pd_title_amnt">Amount</string>
    <string name="pd_title_city">City</string>
    <string name="pd_title_country">Country</string>
    <string name="pd_title_date">Date</string>
    <string name="pd_title_time">Time</string>
    <string name="pd_today">Today</string>
    <string name="pd_txt_address">CLM Sunway Damansara</string>
    <string name="pd_txt_address2">218 Lakin Stravenue Suite 320</string>
    <string name="pd_txt_all">All</string>
    <string name="pd_txt_availability">selected</string>
    <string name="pd_txt_book_outlet_2">Mid Valley Boulevard</string>
    <string name="pd_txt_book_outlet_4">Wed 14 Aug 2020</string>
    <string name="pd_txt_book_outlet_5">Booking Fee(Par pax)</string>
    <string name="pd_txt_book_outlet_6">MYR 30</string>
    <string name="pd_txt_book_outlet_7">Select session</string>
    <string name="pd_txt_booking_confirm_1">Booking is Confirmed!</string>
    <string name="pd_txt_booking_confirm_2">Please complete the booking process.\10We will update you soon!</string>
    <string name="pd_txt_booking_details_10">Amount</string>
    <string name="pd_txt_booking_details_13">New Zealand</string>
    <string name="pd_txt_booking_details_15">Auckland</string>
    <string name="pd_txt_booking_details_2">Name</string>
    <string name="pd_txt_booking_details_3">John Smith</string>
    <string name="pd_txt_booking_details_4">Booking ID</string>
    <string name="pd_txt_booking_details_5">WTS0012</string>
    <string name="pd_txt_booking_details_8">Time</string>
    <string name="pd_txt_booking_details_9">10:30 AM</string>
    <string name="pd_txt_cancel">Cancel</string>
    <string name="pd_txt_card_faq_1">dxgsgssssgsgh</string>
    <string name="pd_txt_card_faq_2">There will be no refund but re-scheduleis allow.(subject to availability)</string>
    <string name="pd_txt_card_today_2">2 hours ago</string>
    <string name="pd_txt_chris_leong">Chris Leong</string>
    <string name="pd_txt_city">Mumbai</string>
    <string name="pd_txt_city_1">Mid\10Valley</string>
    <string name="pd_txt_city_2">Setia\10Alarm</string>
    <string name="pd_txt_city_3">Sri\10Petaling</string>
    <string name="pd_txt_city_4">Sunway\10Damansara</string>
    <string name="pd_txt_city_5">MCL Mid\10Valley</string>
    <string name="pd_txt_city_6">Setia\10Alarm</string>
    <string name="pd_txt_city_7">Sunway\10Damansara</string>
    <string name="pd_txt_city_8">Sri\10Petaling</string>
    <string name="pd_txt_country">India</string>
    <string name="pd_txt_detail_2">Chiroprector</string>
    <string name="pd_txt_detail_3">Patient</string>
    <string name="pd_txt_detail_4">2000+</string>
    <string name="pd_txt_detail_5">Experience</string>
    <string name="pd_txt_detail_6">15 years</string>
    <string name="pd_txt_detail_7">Age</string>
    <string name="pd_txt_detail_8">40 years</string>
    <string name="pd_txt_edit">Edit</string>
    <string name="pd_txt_email_id">abc.xyz@gmail.com</string>
    <string name="pd_txt_enter_email">Enter your email address below</string>
    <string name="pd_txt_faq_1">Is refund for master Chris World Tour or Master Chris outlet refundable?</string>
    <string name="pd_txt_faq_2">If i which o cancel my booking.do I get to refund?</string>
    <string name="pd_txt_faq_3">The different type of Laser Eye Surgery</string>
    <string name="pd_txt_faq_4">Could those Creepy Crawly Nighttime Leg Sensations Be A Treatable Medical Condition</string>
    <string name="pd_txt_faq_5">The Advantage Of Minimal Repair Technique In the treatment For Hernia</string>
    <string name="pd_txt_fill_info">Fillup your information</string>
    <string name="pd_txt_forgot_pswd">Forgot Password?</string>
    <string name="pd_txt_google_sigin">Sign in with Google</string>
    <string name="pd_txt_green_12">12</string>
    <string name="pd_txt_id">tdftyadfttd</string>
    <string name="pd_txt_member_id">Member ID:</string>
    <string name="pd_txt_mobile_no">+ 6014-4523 2345</string>
    <string name="pd_txt_my_profile_2">Member ID:</string>
    <string name="pd_txt_my_profile_3">MTS0012</string>
    <string name="pd_txt_my_profile_4">Email</string>
    <string name="pd_txt_my_profile_5">uiurtle.pro@gmail.com</string>
    <string name="pd_txt_notification_dscp_1">Master Chris World Tour booking confrimed</string>
    <string name="pd_txt_notification_dscp_2">You have 1 schedule tommorow.\10See you tommorow</string>
    <string name="pd_txt_notification_time_1">2 hours ago</string>
    <string name="pd_txt_notification_time_2">3 hours ago</string>
    <string name="pd_txt_other">Other Therapist</string>
    <string name="pd_txt_outlet_2">India</string>
    <string name="pd_txt_outlet_3">Time</string>
    <string name="pd_txt_outlet_5">Booking ID</string>
    <string name="pd_txt_outlet_7">Price</string>
    <string name="pd_txt_profile_1">My Booking</string>
    <string name="pd_txt_profile_2">Booking History</string>
</resources>